tests/trybuild/invalid_command.stderr
error: Unknown command: unknown
 --> tests/trybuild/invalid_command.rs:5:26
  |
5 |     #[partial(NewStruct1(unknown))]
  |                          ^^^^^^^
